<resources>
    <string name="app_name" translatable="false">COVID19</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="perfil">Profile</string>
    <string name="suspeitos_ou_infetados">Suspects or infected</string>
    <string name="sintomas">Sintoms</string>
    <string name="coronavirusimage">CoronaVirusimage</string>
    <string name="idade">Age</string>
    <string name="periodo">Period</string>
    <string name="confirmar">Confirm</string>
    <string name="nome">Name</string>
    <string name="cancelar">Cancel</string>
    <string name="guardar">Save</string>
    <string name="dores_de_cabeca">Headache</string>
    <string name="dores_musculares">Muscle aches</string>
    <string name="cansaco">Fatigue</string>
    <string name="dores_de_garganta">Sore throat</string>
    <string name="tosse">Cough</string>
    <string name="temperatura">Temperature</string>
    <string name="respiracao">Respiration</string>
    <string name="corrimento_nasal">Nasal discharge</string>
    <string name="sexo">Gender</string>
    <string name="altura">Height in cm</string>
    <string name="peso">Weight in g</string>
    <string name="tipo_de_sangue">Blood type</string>
    <string name="data_de_nascimento">Year of birth</string>
    <string name="apagar">Delete</string>
    <string name="editar">Edit</string>
    <string name="escolherdata">Pick Date</string>
    <string name="obrigatorio">Required Field</string>
    <string name="data">Date</string>
    <string name="data_infe_o">Infection Date</string>
    <string name="pesquisar">Search</string>
    <string name="Sucesso">Success</string>
    <string name="Erro">Error. Try again</string>
    <string name="ApagarPessoa">Delete Person</string>
    <string name="ApagarSintoma">Delete Simpton</string>
    <string name="ApagarSusInf">Delete Suspect or Infected</string>
    <string name="Certeza">Are you sure you want to delete?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="utilizador">Uzer</string>
    <string-array name="SexoPerfil">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="SanguePerfil">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="sintomas1">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="sintomas2">
        <item>Normal</item>
        <item>Short</item>
    </string-array>
</resources>
