<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".activity_perfil_adicionar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNomePerfilAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textShortMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewDataNascimentoPerfilAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/data_de_nascimento"
                android:textIsSelectable="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonEscolherDataAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/cor_botoes"
                android:onClick="escolherData"
                android:text="@string/escolherdata"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textViewSexoAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sexo" />

            <Spinner
                android:id="@+id/spinnerSexoAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAlturaAddPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/altura"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPesoAddPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/peso"
                    android:inputType="number|numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewTipoSangueAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tipo_de_sangue" />

            <Spinner
                android:id="@+id/spinnerTipoSagueAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/buttonConfirmarPerfilAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/cor_botoes"
                android:onClick="GuardarPerfil"
                android:text="@string/confirmar"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/buttonCancelarPerfilAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/cor_botoes"
                android:onClick="cancelar"
                android:text="@string/cancelar"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>