<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".activity_sus_inf_editar" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNomeSusEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewDataNascimentoSusEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/data_de_nascimento" />

            <Button
                android:id="@+id/buttonDataNascimentoSusEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/cor_botoes"
                android:onClick="escolherDataNascimento"
                android:text="@string/escolherdata"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textViewSusInfDateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/data_infe_o" />

            <Button
                android:id="@+id/buttonSusDateInfEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/cor_botoes"
                android:onClick="escolherDataInf"
                android:text="@string/escolherdata"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/cor_botoes"
                android:onClick="Guardar"
                android:text="@string/confirmar"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/cor_botoes"
                android:onClick="cancelar"
                android:text="@string/cancelar"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>